infrastructure/base/ot-redis-operator/ot-redis-operator.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ot-redis-operator-system
  labels:
    networking.tinyrack.net/isolation: enabled
